Some refactoring and fixing